# genrebendpro

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
src/services/: genre_detection_service.py  lexicon_service.py  music_organizer_service.py  music_research_service.py  playlist_matching_service.py
src/utils/: config.py
tests/: README.md  test_genrebend_pro.py
